[metadata]
name = reia.datamodel
author = Schmid Nicolas
author_email = nicolas.schmid@sed.ethz.ch
version = 0.1
description = Datamodel for Rapid Earthquake Impact Assessments.
long_description = file: README.md, LICENSE
license = AGPL License
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find_namespace:
install_requires =
    sqlalchemy

python_requires = >= 3.8

[options.extras_require]
tests =
    flake8
    autopep8
    typer
    psycopg2
    
[options.packages.find]
include=reia*

[options.entry_points]
console_scripts = 
    reia-data = reia.datamodel.cli:app

[flake8]
select = E,F,W
max_line_length = 79
ignore = E402, W503
exclude =
  .git,
  .tox,
  .eggs,
  .config,
  *.egg-info,
  __pycache__,
  .pytest_cache,
  env,
